--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.3",
-    "css-select": "^5.1.0",
     "fortawesome": "^0.0.1-security",
+    "nth-check": "^2.1.1",
     "react": "^18.2.0",
     "react-bootstrap-icons": "^1.10.2",
     "react-dom": "^18.2.0",
